vpc.tf
# Create VPC
# terraform aws create vpc
resource "aws_vpc" "vpc" {
  cidr_block              = "${var.vpc_cidr}"
  instance_tenancy        = "default"
  enable_dns_hostnames    = true

  tags      = {
    Name    = "VPC"
  }
}

# Create Internet Gateway and Attach it to VPC
# terraform aws create internet gateway
resource "aws_internet_gateway" "ig" {
  vpc_id    = aws_vpc.vpc.id

  tags      = {
    Name    = "IGW"
  }
}

# Create Public Subnet 1
# terraform aws create subnet
resource "aws_subnet" "public-sub-1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "${var.public-sub-1-cidr}"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags      = {
    Name    = "Public Subnet 1"
  }
}
# Create Public Subnet 2
# terraform aws create subnet
resource "aws_subnet" "public-sub-2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "${var.public-sub-2-cidr}"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags      = {
    Name    = "Public Subnet 2"
  }
}

# Create Route Table and Add Public Route
# terraform aws create route table
resource "aws_route_table" "public-rt" {
  vpc_id       = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ig.id
  }

  tags       = {
    Name     = "Public Route Table"
  }
}

# Associate Public Subnet 1 to "Public Route Table"
# terraform aws associate subnet with route table
resource "aws_route_table_association" "public-sub-1-rta" {
  subnet_id           = aws_subnet.public-sub-1.id
  route_table_id      = aws_route_table.public-rt.id
}

# Associate Public Subnet 2 to "Public Route Table"
# terraform aws associate subnet with route table
resource "aws_route_table_association" "public-sub-2-rta" {
  subnet_id           = aws_subnet.public-sub-2.id
  route_table_id      = aws_route_table.public-rt.id
}

# Create Private Subnet 1
# terraform aws create subnet
resource "aws_subnet" "private-sub-1" {
  vpc_id                   = aws_vpc.vpc.id
  cidr_block               = "${var.private-sub-1-cidr}"
  availability_zone        = "us-east-1a"
  map_public_ip_on_launch  = false

  tags      = {
    Name    = "Private Subnet 1"
  }
}

# Create Private Subnet 2
# terraform aws create subnet
resource "aws_subnet" "private-sub-2" {
  vpc_id                   = aws_vpc.vpc.id
  cidr_block               = "${var.private-sub-2-cidr}"
  availability_zone        = "us-east-1b"
  map_public_ip_on_launch  = false

  tags      = {
    Name    = "Private Subnet 2"
  }
}
